# ufomap

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: ufomapConfig.cmake.in
ufomap/: CMakeLists.txt  Doxyfile  README.md  package.xml
ufomap/include/ufo/algorithm/: algorithm.h
ufomap/include/ufo/container/: flat_map.h  hash_map.h  hash_set.h  range.h  range_map.h  range_set.h
ufomap/include/ufo/geometry/: README.md  aabb.h  aaebb.h  bounding_volume.h  capsule.h  closest_point.h  collision_checks.h  cone.h  contains.h  cylinder.h  ellipsoid.h  frustum.h  geometry.h  helper.h  intersects.h  line.h  line_segment.h  minimum_distance.h  obb.h  plane.h  point.h  ray.h  sphere.h  triangle.h  types.h
ufomap/include/ufo/map/: bit_set.h  buffer.h  code.h  color.h  color_map.h  index.h  index_field.h  io.h  key.h  map_base.h  node.h  node_base.h  occupancy_map.h  occupancy_map_base.h  occupancy_map_color.h  occupancy_map_color_semantic.h  occupancy_map_node.h  occupancy_map_semantic.h  occupancy_map_time.h  occupancy_map_time_color.h  occupancy_map_time_color_semantic.h  occupancy_map_time_semantic.h  octree.h  octree_map_base.h  octree_node_base.h  point.h  point_cloud.h  surfel_map.h  types.h  ufomap.h
ufomap/include/ufo/map/code/: code.h  code_unordered_map.h  code_unordered_set.h  node_handle.h
ufomap/include/ufo/map/color/: color.h  color_map.h  color_map_base.h  color_node.h  color_predicate.h
ufomap/include/ufo/map/count/: count_map.h  count_node.h
ufomap/include/ufo/map/counter/: counter_map.h  counter_node.h
ufomap/include/ufo/map/distance/: distance_map.h  distance_map_base.h  distance_node.h  distance_predicate.h
ufomap/include/ufo/map/empty/: empty_map.h  empty_node.h
ufomap/include/ufo/map/hit_miss/: hit_miss_node.h
ufomap/include/ufo/map/integration/: grid.h  integration.h  integration_point.h  integration_point_cloud.h  integrator.h
ufomap/include/ufo/map/integrator/: grid.h  integrator.h  integrator_point_cloud.h
ufomap/include/ufo/map/intensity/: intensity_map.h  intensity_node.h  intensity_predicate.h
ufomap/include/ufo/map/iterator/: occupancy_map.h  occupancy_map_nearest.h  octree.h
ufomap/include/ufo/map/label/: label_map.h  label_predicate.h  label_set.h  single_label_map.h
ufomap/include/ufo/map/occupancy/: occupancy_indicators.h  occupancy_map.h  occupancy_map_base.h  occupancy_map_time_base.h  occupancy_node.h  occupancy_predicate.h
ufomap/include/ufo/map/octree/: block.h  iterator.h  node.h  octree.h  octree_base.h  octree_indicators.h  octree_iterator.h  octree_map.h  octree_map_base.h  octree_node.h  octree_node_base.h  octree_predicate.h  propagation_criteria.h  query.h
ufomap/include/ufo/map/predicate/: occupancy.h  octree.h  predicates.h  satisfies.h  semantics.h  signed_distance.h  simple_semantic.h  spatial.h  surfel.h  time.h
ufomap/include/ufo/map/ray_caster/: ray_caster.h  simple_ray_caster.h
ufomap/include/ufo/map/reflection/: reflection.h  reflection_map.h  reflection_node.h
ufomap/include/ufo/map/semantic/: asd.cpp  label_deserialize.h  label_mapping.h  label_propagation.h  semantic.h  semantic_container.h  semantic_label_deserialize.h  semantic_label_propagation.h  semantic_map.h  semantic_map_base.h  semantic_mapping.h  semantic_node.h  semantic_predicate.h  semantic_propagation.h  semantics copy.h  semantics.h  semantics_reference.h
ufomap/include/ufo/map/signed_distance/: signed_distance_base.h  signed_distance_map_base.h  signed_distance_node.h
ufomap/include/ufo/map/simple_semantic/: simple_semantic_map_base.h  simple_semantic_node.h
ufomap/include/ufo/map/surfel/: surfel.h  surfel_map.h  surfel_map_base.h  surfel_node.h  surfel_reference.h  surfel_util.h
ufomap/include/ufo/map/time/: time_map.h  time_map_base.h  time_node.h  time_predicate.h
ufomap/include/ufo/math/: logit.h  pose6.h  quaternion.h  util.h  vector3.h
ufomap/include/ufo/util/: enum.h  iterator_wrapper.h  timing.h  type_traits.h
ufomap/map_type_generate/: map.h
ufomap/src/geometry/: bounding_volume.cpp  collision_checks.cpp  contain.cpp  contains.cpp  helper.cpp  intersects.cpp  minimum_distance.cpp
ufomap/src/map/: io.cpp  map_type_generator  map_type_generator.cpp  occupancy_map_color.cpp
ufomap_ros/ufomap_gazebo_plugins/: CMakeLists.txt  package.xml
ufomap_ros/ufomap_gazebo_plugins/include/ufomap_gazebo_plugins/: ufomap_from_gazebo.h
ufomap_ros/ufomap_gazebo_plugins/src/: ufomap_from_gazebo.cpp
ufomap_ros/ufomap_gazebo_plugins/srv/: GetMap.srv
ufomap_ros/ufomap_mapping/: CMakeLists.txt  README.md  package.xml
ufomap_ros/ufomap_mapping/cfg/: Server.cfg
ufomap_ros/ufomap_mapping/include/ufomap_mapping/: server.h
ufomap_ros/ufomap_mapping/launch/: server.launch
ufomap_ros/ufomap_mapping/src/: server.cpp  server_node.cpp
ufomap_ros/ufomap_msgs/: CMakeLists.txt  package.xml
ufomap_ros/ufomap_msgs/include/ufomap_msgs/: conversions.h
ufomap_ros/ufomap_msgs/msg/: AABB.msg  BoundingVolume.msg  Frustum.msg  Labels.msg  LineSegment.msg  OBB.msg  Plane.msg  Ray.msg  Sphere.msg  UFOMap.msg  UFOMapMetaData.msg  UFOMapStamped.msg
ufomap_ros/ufomap_msgs/src/: conversions.cpp
ufomap_ros/ufomap_ros/: CMakeLists.txt  package.xml
ufomap_ros/ufomap_ros/include/ufomap_ros/: conversions.h
ufomap_ros/ufomap_ros/src/: conversions.cpp
ufomap_ros/ufomap_rviz_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
ufomap_ros/ufomap_rviz_plugins/include/ufomap_rviz_plugins/: base.h  color.h  data.h  filter.h  filter_display.h  heatmap.h  map_type_display.h  performance.h  performance_display.h  render_data.h  render_display.h  render_mode.h  state.h  state_display.h  ufomap.h  ufomap_display.h  voxels.h  worker.h  worker_base.h
ufomap_ros/ufomap_rviz_plugins/ogre_media/: plugins.cfg
ufomap_ros/ufomap_rviz_plugins/src/: data.cpp  filter_display.cpp  performance_display.cpp  render_data.cpp  render_display.cpp  ufomap_display.cpp  voxels.cpp
ufomap_ros/ufomap_srvs/: CMakeLists.txt  package.xml
ufomap_ros/ufomap_srvs/srv/: ClearVolume.srv  GetMap.srv  Reset.srv  SaveMap.srv
(+45 files in other folders)
