<?xml version="1.0"?>
<package format="2">
  <name>ufomap_msgs</name>
  <version>1.0.0</version>
  <description>The ufomap_msgs package provides messages and serializations for the UFOMap library</description>

  <author email="dduberg@kth.se">Daniel Duberg</author>
  <maintainer email="dduberg@kth.se">Daniel Duberg</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/danielduberg/ufo_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <build_depend>ufomap</build_depend>
  
  <doc_depend>doxygen</doc_depend>

</package>
